# Qt-Projects

./: .gitattibutes  .gitignore
Convert-to-UTF-8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
FindDuplicateModels/: .gitignore  CMakeLists.txt  Info.plist  main.cpp
LTspiceLibs.LAST/: LTspiceLibs.qbs  changes.cpp  changes.h  example.cpp  example.h  ftpclient.cpp  ftpclient.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  symbol.cpp  symbol.h  utilities.cpp  utilities.h
LTspiceLibs.LAST/Windows/: utilities_windows.cpp
LTspiceSign/: ui_form.py  widget.py
LTspiceSign.OLD/: .gitignore  LTspice.yml  LTspiceSign.pyproject  form.ui  ui_form.py  widget.py
UpdateLTspice/: .gitignore  UpdateLTspice.pro  UpdateLTspice.qtvscr  changes.cpp  changes.h  dirpaths.cpp  dirpaths.h  example.cpp  example.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  symbol.cpp  symbol.h  ui_mainwindow.h  utilities.cpp  utilities.h
UpdateLTspice/Windows/: utilities_windows.cpp  utilities_windows.h
UpdateLTspice/debug/: UpdateLTspice.exe.recipe  moc_predefs.h
UpdateLTspice/debug/qt/: qtvars.xml
UpdateLTspice/debug/qt/qmake/: props.txt  qtvars.pro
UpdateLTspice/release/qt/: qtvars.xml
UpdateLTspice/release/qt/qmake/: qtvars.pro
UpdateLTspiceCL/: CMakeLists.txt  CMakeLists_original.txt  CMakeUserPresets.json  changes.cpp  changes.h  dirpaths.cpp  dirpaths.h  example.cpp  example.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  symbol.cpp  symbol.h  utilities.cpp  utilities.h
UpdateLTspiceCL/Windows/: utilities_windows.cpp  utilities_windows.h
chilkat_arm64/include/: C_CkAtom.h  C_CkAuthAwsW.h  C_CkAuthAzureSAS.h  C_CkAuthAzureSASW.h  C_CkBz2W.h  C_CkCache.h  C_CkCacheW.h  C_CkCertW.h  C_CkCgi.h  C_CkCompressionW.h  C_CkCsv.h  C_CkCsvW.h  C_CkDh.h  C_CkDhW.h  C_CkDirTree.h  C_CkDirTreeW.h  C_CkDkimW.h  C_CkDtObjW.h  C_CkEcc.h  C_CkEdDSA.h  C_CkEmail.h  C_CkEmailBundleW.h  C_CkEmailW.h  C_CkFtp2.h  C_CkGzipW.h  C_CkHtmlToXml.h  C_CkHtmlToXmlW.h  C_CkHttpRequest.h  C_CkHttpRequestW.h  C_CkHttpResponseW.h  C_CkHttpW.h  C_CkImapW.h  C_CkJavaKeyStoreW.h  C_CkJwsW.h  C_CkJwtW.h  C_CkMailboxesW.h  C_CkNtlm.h  C_CkOAuth2.h  C_CkPkcs11.h  C_CkPkcs11W.h  (+97 more)
chilkat_mingw_x86_64/include/: C_CkAtomW.h  C_CkAuthAzureStorage.h  C_CkAuthAzureStorageW.h  C_CkAuthUtilW.h  C_CkBinData.h  C_CkBounce.h  C_CkBz2.h  C_CkCert.h  C_CkCertChainW.h  C_CkCertStore.h  C_CkCertStoreW.h  C_CkCgiW.h  C_CkCharsetW.h  C_CkCodeSign.h  C_CkCreateCSW.h  C_CkCrypt2W.h  C_CkCsp.h  C_CkCsr.h  C_CkCsrW.h  C_CkDateTime.h  C_CkDateTimeW.h  C_CkDsa.h  C_CkDsaW.h  C_CkEccW.h  C_CkEmailBundle.h  C_CkFileAccess.h  C_CkGlobal.h  C_CkGzip.h  C_CkHashtable.h  C_CkHashtableW.h  C_CkHtmlToText.h  C_CkHttpResponse.h  C_CkImap.h  C_CkJavaKeyStore.h  C_CkJsonArrayW.h  C_CkJsonObject.h  C_CkJsonObjectW.h  C_CkJwe.h  C_CkKeyContainer.h  C_CkLogW.h  (+116 more)
chilkat_x86_64/include/: C_CkAsn.h  C_CkAsnW.h  C_CkAuthAws.h  C_CkAuthGoogle.h  C_CkAuthGoogleW.h  C_CkAuthUtil.h  C_CkBinDataW.h  C_CkBounceW.h  C_CkByteData.h  C_CkCertChain.h  C_CkCharset.h  C_CkCodeSignW.h  C_CkCompression.h  C_CkCreateCS.h  C_CkCrypt2.h  C_CkCspW.h  C_CkDkim.h  C_CkDns.h  C_CkDnsW.h  C_CkDtObj.h  C_CkEdDSAW.h  C_CkFileAccessW.h  C_CkFtp2W.h  C_CkGlobalW.h  C_CkHtmlToTextW.h  C_CkHttp.h  C_CkJsonArray.h  C_CkJweW.h  C_CkJws.h  C_CkJwt.h  C_CkKeyContainerW.h  C_CkLog.h  C_CkMailManW.h  C_CkMailboxes.h  C_CkMessageSetW.h  C_CkMht.h  C_CkOAuth1.h  C_CkPem.h  C_CkPemW.h  C_CkPfx.h  (+91 more)
